--- a/DESeq_Paper.Rmd
+++ b/DESeq_Paper.Rmd
@@ -1,13 +1,13 @@
 ---
 title: "DESeq2"
-author: "Abby Deaven"
-date: "2022-10-30"
+author: "Eddie Torres"
+date: "2025-04-18"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_knit$set(root.dir = "C:/Users/abbyd/OneDrive - University of Georgia/Lewis Lab/Research/Data/Development/Bioinformatics/RNAseq/RNAseqPlotting_New10-2022/res")
+knitr::opts_knit$set(root.dir = "C:\\Users\\eddie\\Research\\GitHub\\Research")
 ```
 
 ## R Markdown
@@ -34,22 +34,22 @@ library(dplyr)
 Read in the featurecounts output, convert to a matrix, and remove unneccesary columns to include ONLY the count numbers, then convert columns to numeric.
 ```{r cts}
 setwd("C:\\Users\\eddie\\Desktop\\Research\\GitHub")
-cts2 <- as.matrix(read.table("./readcounts_no_isw_rtt109.txt", sep="\t", row.names =1, header = TRUE))
+cts2 <- as.matrix(read.table("./text_files/readcounts_FINAL.txt", sep="\t", row.names =1, header = TRUE))
 cts2 <- as.matrix(cts2[,-c(1:5)])
 ## change ncol to match number of columns
-cts_numeric <- matrix(as.numeric(cts), ncol = 30)
-dimnames(cts_numeric) <- list(rownames(cts), colnames(cts))
+cts_numeric <- matrix(as.numeric(cts2), ncol = 28)
+dimnames(cts_numeric) <- list(rownames(cts2), colnames(cts2))
 ```
 
 
 Export column names to a text file, open in a text editor and replace SRRs with short/identifiable names, save, and read in the file again to replace column titles with human readable names.
 
 ```{r titles}
-samplesname <- colnames(cts)
+samplesname <- colnames(cts2)
 write.table(samplesname, file="samplenames.txt", sep="\t")
 
 #after editing sample names in excel or text editor (new names are in column 3), read in the spreadsheet with hand annotated sample names that are short 
-rename <- read.table("./samplenames2.txt", header=FALSE, skip=1, sep = "\t")
+rename <- read.table("./samplenames.txt", header=FALSE, skip=1, sep = "\t")
 #assign short sample names to variable
 cnames <- rename$V2
 #replace column names
@@ -62,9 +62,13 @@ All samples must have the same number of replicates. I'm averaging across sample
 cac1 <- rowMeans(cts_numeric[, 1:3], na.rm = TRUE)
 cac2 <- rowMeans(cts_numeric[, 4:6], na.rm = TRUE)
 cac3 <- rowMeans(cts_numeric[, 7:9], na.rm = TRUE)
-WT <- rowMeans(cts_numeric[, 10:13], na.rm = TRUE)
-set7 <- rowMeans(cts_numeric[, 14:16], na.rm = TRUE)
-set3 <- rowMeans(cts_numeric[, 29:30], na.rm = TRUE)
+naf1 <- rowMeans(cts_numeric[, 10:12], na.rm = TRUE)
+asf1 <- rowMeans(cts_numeric[, 13:15], na.rm = TRUE)
+naf2 <- rowMeans(cts_numeric[, 16:18], na.rm = TRUE)
+ATRX <- rowMeans(cts_numeric[, 19:21], na.rm = TRUE)
+WT <- rowMeans(cts_numeric[, 22:25], na.rm = TRUE)
+set7 <- rowMeans(cts_numeric[, 26:28], na.rm = TRUE)
+#set3 <- rowMeans(cts_numeric[, 29:30], na.rm = TRUE)
 ```
 
 ## Importing DEseq metadata
@@ -82,7 +86,8 @@ The coldata file contains the column names that are shown in the cts matrix, the
 After that, convert each column to a factor.
 
 ```{r coldata}
-coldata <- read.csv("./coldata.csv", header= TRUE, row.names = 1)
+#Check Directory (./ vs ../)
+coldata <- read.csv("../coldata.csv", header= TRUE, row.names = 1)
 coldata$condition <- factor(coldata$condition)
 coldata$type <- factor(coldata$type)
 ```
@@ -92,6 +97,7 @@ Confirm that the number and order of samples are the same in each dataset before
 all(rownames(coldata) %in% colnames(cts_numeric))
 all(rownames(coldata) == colnames(cts_numeric))
 
+#pseudocount
 cts_numeric_3 = cts_numeric + 1
 ```
 ##### CREATE DESEQ DATASET AND RUN DESEQ2 #####
@@ -106,11 +112,11 @@ dds<- DESeqDataSetFromMatrix(countData = round(cts_numeric_3),
 dds
 
 ##pre-filteringreads <10
-keep <- rowSums(counts(dds))>= 10
+keep <- rowSums(counts(dds))>= 2
 dds<- dds[keep,]
 
 #specify level of comparison
-dds$condition <- relevel(dds$condition, ref = "WTmycelia")
+dds$condition <- relevel(dds$condition, ref = "WT")
 ```
 
 Now, run DEseq and plot dispesion estimates to see the quality of the fit. 
@@ -124,40 +130,40 @@ Export genes with statistically significant differential expression when compare
 ```{r coldata}
 alpha = 0.05
 
-cac1 <- results(dds2, alpha=alpha, contrast=c("condition", "cac1", "WTmycelia"))
-cac2 <- results(dds2, alpha=alpha, contrast=c("condition", "cac2", "WTmycelia"))
-cac3 <- results(dds2, alpha=alpha, contrast=c("condition", "cac3", "WTmycelia"))
-#naf1 <- results(dds2, alpha=alpha, contrast=c("condition", "naf1", "WTmycelia"))
-#naf2 <- results(dds2, alpha=alpha, contrast=c("condition", "naf2", "WTmycelia"))
-#asf1 <- results(dds2, alpha=alpha, contrast=c("condition", "asf1", "WTmycelia"))
-#ATRX <- results(dds2, alpha=alpha, contrast=c("condition", "ATRX", "WTmycelia"))
-set7 <- results(dds2, alpha=alpha, contrast=c("condition", "set7", "WTmycelia"))
-set3 <- results(dds2, alpha=alpha, contrast=c("condition", "set3", "WTmycelia"))
+cac1 <- results(dds2, alpha=alpha, contrast=c("condition", "cac1", "WT"))
+cac2 <- results(dds2, alpha=alpha, contrast=c("condition", "cac2", "WT"))
+cac3 <- results(dds2, alpha=alpha, contrast=c("condition", "cac3", "WT"))
+naf1 <- results(dds2, alpha=alpha, contrast=c("condition", "naf1", "WT"))
+naf2 <- results(dds2, alpha=alpha, contrast=c("condition", "naf2", "WT"))
+asf1 <- results(dds2, alpha=alpha, contrast=c("condition", "asf1", "WT"))
+ATRX <- results(dds2, alpha=alpha, contrast=c("condition", "ATRX", "WT"))
+set7 <- results(dds2, alpha=alpha, contrast=c("condition", "set7", "WT"))
+#set3 <- results(dds2, alpha=alpha, contrast=c("condition", "set3", "WT"))
 
 ```
 
 Subset to only export significant differentially expressed genes
 
 ```{r}
-cac1 <- subset(cac1, padj < 0.05)
-cac2 <- subset(cac2, padj < 0.05)
-cac3 <- subset(cac3, padj < 0.05)
-#naf1 <- subset(naf1, padj < 0.05)
-#naf2 <- subset(naf2, padj < 0.05)
-#asf1 <- subset(asf1, padj < 0.05)
-#ATRX <- subset(ATRX, padj < 0.05)
-set7 <- subset(set7, padj < 0.05)
-set3 <- subset(set3, padj < 0.05)
+cac1_sig <- subset(cac1, padj < 0.01)
+cac2_sig <- subset(cac2, padj < 0.01)
+cac3_sig <- subset(cac3, padj < 0.01)
+naf1_sig <- subset(naf1, padj < 0.01)
+naf2_sig <- subset(naf2, padj < 0.01)
+asf1_sig <- subset(asf1, padj < 0.01)
+ATRX_sig <- subset(ATRX, padj < 0.01)
+set7_sig <- subset(set7, padj < 0.01)
+#set3 <- subset(set3, padj < 0.05)
 
-write.csv(as.data.frame(cac1), file = "cac1.csv")
-write.csv(as.data.frame(cac2), file = "cac2.csv")
-write.csv(as.data.frame(cac3), file = "cac3.csv")
-#write.csv(as.data.frame(naf1), file = "naf1.csv")
-#write.csv(as.data.frame(naf2), file = "naf2.csv")
-#write.csv(as.data.frame(asf1), file = "asf1.csv")
-#write.csv(as.data.frame(ATRX), file = "ATRX.csv")
-write.csv(as.data.frame(set7), file = "set7.csv")
-write.csv(as.data.frame(set3), file = "set3.csv")
+write.csv(as.data.frame(cac1_sig), file = "cac1.csv")
+write.csv(as.data.frame(cac2_sig), file = "cac2.csv")
+write.csv(as.data.frame(cac3_sig), file = "cac3.csv")
+write.csv(as.data.frame(naf1_sig), file = "naf1.csv")
+write.csv(as.data.frame(naf2_sig), file = "naf2.csv")
+write.csv(as.data.frame(asf1_sig), file = "asf1.csv")
+write.csv(as.data.frame(ATRX_sig), file = "ATRX.csv")
+write.csv(as.data.frame(set7_sig), file = "set7.csv")
+#write.csv(as.data.frame(set3), file = "set3.csv")
 ```
 
 ### Analyzing DE Genes
@@ -168,7 +174,7 @@ Read results files back into r as a single matrix
 knitr::opts_knit$set(root.dir = "C:\\Users\\eddie\\Desktop\\Research\\GitHub\\Research")
 
 setwd("C:\\Users\\eddie\\Desktop\\Research\\GitHub\\Research")
-list_of_files <- list.files(path = "C:\\Users\\eddie\\Desktop\\Research\\GitHub\\Research",
+list_of_files <- list.files(path = "../Research",
                             recursive = TRUE,
                             pattern = ".csv$")
 
@@ -189,14 +195,14 @@ l2fc <- tibble::rownames_to_column(l2fc_data, "VALUE")
 Find genes upregulated at any stage of perithecial development
 
 ```{r}
-peri <- l2fc_data[,2:5]
-peri_induced <- peri  %>% filter_at(vars(1:4), any_vars(. >4))
-peri_3 <- peri %>% filter_at(vars(1), any_vars(. >4))
-peri_4 <- peri %>% filter_at(vars(2), any_vars(. >4))
-peri_5 <- peri %>% filter_at(vars(3), any_vars(. >4))
-peri_6 <- peri %>% filter_at(vars(4), any_vars(. >4))
+#peri <- l2fc_data[,2:5]
+#peri_induced <- peri  %>% filter_at(vars(1:4), any_vars(. >4))
+#peri_3 <- peri %>% filter_at(vars(1), any_vars(. >4))
+#peri_4 <- peri %>% filter_at(vars(2), any_vars(. >4))
+#peri_5 <- peri %>% filter_at(vars(3), any_vars(. >4))
+#peri_6 <- peri %>% filter_at(vars(4), any_vars(. >4))
 
-write.csv(as.data.frame(peri_induced), file = "peri_induced.csv")
+#write.csv(as.data.frame(peri_induced), file = "peri_induced.csv")
 
 ```
 Compare gene upregulation using UpSet plots. Data is entered by first listing the categories and the number of individuals in each category. After that, list intersections. I like to do this by calculating the number of overlaps directly in the input, but you can also do this separately. For example, if X has 10 samples, Y has 15 samples, and Z has 20 samples, you would enter like this:
@@ -217,7 +223,7 @@ To make the UpSet plot, run the code "upset(fromExpression(input)," and input pa
 install.packages("UpSetR")
 library(UpSetR)
 
-library(UpSetR)
+#library(UpSetR)
 
 # Dataset
 input <- c(
@@ -252,12 +258,60 @@ input <- c(
 
 #IGV Track
 ```{r}
-ngenes = read.csv("neurospora_genes.csv")
+ngenes = read.csv("../csv_files/neurospora_genes.csv")
 
 combine <- transform(merge(ngenes, l2fc, by = "VALUE"))
-track = combine %>% select("SequenceID", "FeatureStart", "FeatureEnd", "VALUE", "cac1.csv", "cac2.csv", "cac3.csv", "set3.csv", "set7.csv")
+track = combine %>% select("SequenceID", "FeatureStart", "FeatureEnd", "VALUE", "asf1.csv", "ATRX.csv", "cac1.csv", "cac2.csv", "cac3.csv", "naf1.csv", "naf2.csv", "set7.csv")
 
-write.table(track, file="cactrack_ash3.igv", sep="\t", row.names = FALSE, quote = FALSE)
+write.table(track, file="histchaps_all.igv", sep="\t", row.names = FALSE, quote = FALSE)
 ```
 
+#Subsetting DEG by which strain they are up- or downregulated in CAF-1 mutants. Also extracting a list of ALL DEG for GO Analysis
+```{r}
+#Reading in the csv's w/ DEGs back in
+cac1_DEG <- read.csv("./cac1.csv", header= TRUE, row.names = 1)
+cac2_DEG <- read.csv("./cac2.csv", header= TRUE, row.names = 1)
+cac3_DEG <- read.csv("./cac3.csv", header= TRUE, row.names = 1)
 
+#make a columns w/ gene names for easier subsetting
+cac1_DEG <- tibble::rownames_to_column(cac1_DEG, "NCU")
+cac2_DEG <- tibble::rownames_to_column(cac2_DEG, "NCU")
+cac3_DEG <- tibble::rownames_to_column(cac3_DEG, "NCU")
+
+#Splitting Up & Down regulated genes
+cac1_UP <- subset(cac1_DEG, cac1_DEG$log2FoldChange > 0)
+cac1_DOWN <- subset(cac1_DEG, cac1_DEG$log2FoldChange < 0)
+cac2_UP <- subset(cac2_DEG, cac1_DEG$log2FoldChange > 0)
+cac2_DOWN <- subset(cac2_DEG, cac1_DEG$log2FoldChange < 0)
+cac3_UP <- subset(cac3_DEG, cac1_DEG$log2FoldChange > 0)
+cac3_DOWN <- subset(cac3_DEG, cac1_DEG$log2FoldChange < 0)
+#Write csv's
+
+write.csv(as.data.frame(cac1_UP), file = "cac1_UP.csv")
+write.csv(as.data.frame(cac1_DOWN), file = "cac1_DOWN.csv")
+write.csv(as.data.frame(cac2_UP), file = "cac2_UP.csv")
+write.csv(as.data.frame(cac2_DOWN), file = "cac2_DOWN.csv")
+write.csv(as.data.frame(cac3_UP), file = "cac3_UP.csv")
+write.csv(as.data.frame(cac3_DOWN), file = "cac3_DOWN.csv")
+
+#Combining all DEG's across CAF-1 mutants into one df
+##I want only cac-1 & cac-2 first
+CAF1_DEG <- rows_upsert(cac1_DEG, cac2_DEG, by = "NCU")
+write.csv(as.data.frame(CAF1_DEG), file = "cac1_2_DEG.csv")  
+
+#I also wanted to see what genes are DE in BOTH cac-1/2 or All CAF mutants
+cac1and2_UP <- subset(CAF1_DEG, CAF1_DEG$NCU %in% cac1_UP$NCU & CAF1_DEG$NCU %in% cac2_UP$NCU)
+cac1and2_DOWN <- subset(CAF1_DEG, CAF1_DEG$NCU %in% cac1_DOWN$NCU & CAF1_DEG$NCU %in% cac2_DOWN$NCU)
+
+write.csv(as.data.frame(cac1and2_UP), file = "cac1and2_UP.csv")
+write.csv(as.data.frame(cac1and2_DOWN), file = "cac1and2_DOWN.csv")
+
+#Now including cac-3  
+CAF1_DEG <- rows_upsert(CAF1_DEG, cac3_DEG, by = "NCU")
+
+#Write csv to obtain NCU for all DEG across all 3 CAF-1 mutants
+write.csv(as.data.frame(CAF1_DEG), file = "CAF1_DEG.csv")
+
+
+
+```
